2014-03-18  Richard Henderson  <rth@redhat.com>

	PR target/60562
	* config/i386/i386.md (*float<SWI48x><MODEF>2_i387): Move down to
	be shadowed by *float<SWI48><MODEF>2_sse.  Test X87_ENABLE_FLOAT.

2014-03-18  Basile Starynkevitch  <basile@starynkevitch.net>

        * plugin.def: Improve comment for PLUGIN_INCLUDE_FILE.
        * doc/plugins.texi (Plugin callbacks): Mention
        PLUGIN_INCLUDE_FILE.
        Italicize plugin event names in description.  Explain that
        PLUGIN_PRAGMAS has no sense for lto1. Explain
        PLUGIN_INCLUDE_FILE.
        Remind that no GCC functions should be called after
        PLUGIN_FINISH.
        Explain what pragmas with expansion are.

2014-03-18  Martin Liska  <mliska@suse.cz>

	* cgraph.c (cgraph_update_edges_for_call_stmt_node): Added case when
	gimple call statement is update.
	* gimple-fold.c (gimple_fold_call): Changed order for GIMPLE_ASSIGN and
	GIMPLE_CALL, where gsi iterator still points to GIMPLE CALL.

2014-03-18  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/60557
	* ubsan.c (ubsan_instrument_unreachable): Call
	initialize_sanitizer_builtins.
	(ubsan_pass): Likewise.

	PR sanitizer/60535
	* ubsan.c (ubsan_type_descriptor, ubsan_create_data): Call
	varpool_finalize_decl instead of rest_of_decl_compilation.

2014-03-18  Richard Biener  <rguenther@suse.de>

	* df-problems.c (df_rd_confluence_n): Avoid bitmap_copy
	by using bitmap_and_compl instead of bitmap_and_compl_into.
	(df_rd_transfer_function): Likewise.

2014-03-18  Richard Biener  <rguenther@suse.de>

	* doc/lto.texi (fresolution): Fix typo.

2014-03-18  Richard Biener  <rguenther@suse.de>

	* doc/invoke.texi (flto): Update for changes in 4.9.

2014-03-18  Richard Biener  <rguenther@suse.de>

	* doc/loop.texi: Remove section on the removed lambda framework.
	Update loop docs with recent changes in preserving loop structure.

2014-03-18  Richard Biener  <rguenther@suse.de>

	* doc/lto.texi (-fresolution): Document.
